--- a/css/main.css
+++ b/css/main.css
@@ -20,15 +20,16 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px red solid;
 }
 .nav_items{
     display:flex;
-    border: 1px var(--fg-color) solid;
-    border-radius: .5rem;
 }
 .nav_item{
     padding: .6rem;
+}
+.social_links{
+    display: flex;
+    align-items: center;
 }
 
 body{
@@ -40,7 +41,6 @@ body{
 
 .hero{
     margin: auto;
-    border: 1px black solid;
     display: flex;
     flex-direction: column;
     justify-content: center;
